@@ -13,11 +13,12 @@ use Moose;
 extends qw(File::DataClass::Storage);
 
 has '+extn'     => default => q(.xml);
-has 'root_name' => is => 'ro', isa => 'Str',      default  => q(config);
+has 'root_name' => is => 'ro', isa => 'Str',      default  => 'config';
 has '_arrays'   => is => 'rw', isa => 'F_DC_HashRefOfBools',
    coerce       => TRUE,  init_arg => 'force_array',
    default      => sub { return {} };
-has '_dtd'      => is => 'rw', isa => 'ArrayRef', default  => sub { return [] };
+has '_dtd'      => is => 'rw', isa => 'ArrayRef', init_arg => 'dtd',
+   default      => sub { return [] };
 
 around '_meta_pack' => sub {
    my ($orig, $self, $args) = @_; my $packed = $self->$orig( $args );
